Fix issues with ChatInterface overlap and style (#5677)

--- a/panel/theme/css/default.css
+++ b/panel/theme/css/default.css
@@ -8,6 +8,7 @@
   --panel-on-background-color: #212529;
   --panel-surface-color: #f3f3f3;
   --panel-on-surface-color: #1a1d21;
+  --panel-shadow-color: #3c4043;
   --code-bg-color: #263238;
   --code-text-color: #82aaff;
   --primary-bg-color: #0d6efd;
